# MeStocky-Rocket

./: Cargo.toml  README.md  README.pt-br.md  database.sql  mod.rs  prelude.rs
src/: configs.rs  errors.rs  main.rs
src/configs/: config_bcrypt.rs  config_cors.rs  config_database.rs  config_environment.rs  config_jwt.rs  mod.rs
src/entities/: mod.rs  prelude.rs  tb_action.rs  tb_category.rs  tb_product.rs  tb_reason.rs  tb_refund_reasons.rs  tb_report.rs  tb_return_reason.rs  tb_role.rs  tb_user.rs
src/entities/dtos/: category_dtos.rs  generic_dtos.rs  login_dtos.rs  mod.rs  product_dtos.rs  reason_dtos.rs  report_dtos.rs  return_reason_dtos.rs  role_dtos.rs  user_dtos.rs
src/entities/enums/: mod.rs  user_enums.rs
src/guards/: guard_user.rs  mod.rs
src/routes/: generic_functions.rs  login.rs  mod.rs  route_category.rs  route_product.rs  route_reason.rs  route_report.rs  route_return_reason.rs  route_role.rs  route_user.rs
src/services/: mod.rs  service_category.rs  service_product.rs  service_reason.rs  service_report.rs  service_return_reason.rs  service_role.rs  service_user.rs
